Disable parallax option for global background, enable only for region. Fixed getting wrong size for full width image on global background. Also fixed parallax z-index issue with global background.

--- a/styles/editor-interface.css
+++ b/styles/editor-interface.css
@@ -3776,7 +3776,7 @@ a.upfront-region-name-edit-trigger:before {
   display: block; }
 
 .background-type-field .upfront-field-select, .background-image-field .upfront-field-select {
-  max-width: 130px; }
+  max-width: 140px; }
 
 #settings {
   position: fixed;
